src/css/tabs/configuration.css
#tab-configuration-templates {
    display: none;
}

.tab-configuration {
    position: relative;
}

.tab-configuration input,
.tab-configuration select {
    border: 1px solid var(--subtleAccent);
    height: 20px;
    border-radius: 3px;
}

.tab-configuration table {
    margin-bottom: 0;
}

.tab-configuration table,
.tab-configuration table th,
.tab-configuration table td {
    padding: 0;
    text-align: left;
}

.tab-configuration table th {
    padding: 0 3px;
}

.tab-configuration .flight-stats-display {
    display: flex;
    justify-content: flex-start;
    align-items: flex-start;
    gap: 12px;
}

.tab-configuration .flight-stats-display {
    padding-top: 4px;
}

.tab-configuration .flight-stats-display button {
    margin: 4px;
    font-size: 11px;

    border-radius: 3px;
    padding: 0 8px 0 8px;
    line-height: 24px;
    border: 1px solid var(--subtleAccent);
    color: #000;
    background-color: var(--button-background);
}

.tab-configuration .flight-stats-display button:hover {
    background-color: #dedcdc;
}

.tab-configuration .flight-stats-display th {
    width: 100px;
    padding: 0;
}

.tab-configuration .flight-stats-display td {
    padding: 0;
    padding-left: 8px;
}

.tab-configuration table td {
    padding: 5px 3px;
}

.tab-configuration table tr + tr {
    border-top: 1px dotted var(--superSubtleAccent);
}

.tab-configuration table tr td:first-child {
    text-align: left;
}

.tab-configuration table thead tr:first-child {
    background-color: #ececec;
}

.tab-configuration .featuresMultiple {
    border-collapse: collapse;
    padding: 0;
}

.tab-configuration .serialPorts .portid {
    display: inline-block;
    min-width: 60px;
    font-size: 13px;
    font-weight: bold;
}

.tab-configuration .serialPorts .uartid {
    display: inline-block;
    font-size: 11px;
    font-weight: normal;
}

.tab-configuration .serialPorts td:nth-child(1) {
    width: 30%;
}

.tab-configuration .serialPorts td:nth-child(2) {
    width: 50%;
}

.tab-configuration .serialPorts td:nth-child(3) {
    width: 20%;
}

.tab-configuration .serialPorts tr:last-child td {
    border-bottom: 0;
    padding-bottom: 0;
    margin-bottom: 0;
}

.tab-configuration .serialPorts .identifier {
    min-width: 50px;
}

.tab-configuration .serialPorts .function {
    width: 95%;
}

.tab-configuration .serialPorts .baudrate {
    min-width: 90px;
    width: 95%;
}

.tab-configuration .number input {
    box-sizing: border-box;
    width: 100px;
    padding-left: 3px;
    height: 22px;
    line-height: 20px;
    text-align: left;
    border-radius: 3px;
    font-size: 12px;
    font-weight: normal;
}

.tab-configuration .number .disabled {
    width: 48px;
    padding: 0 5px;
    background-color: #ececec;
}

.tab-configuration .number span {
    margin-left: 0;
}

.tab-configuration .board_align_inputs input {
    float: left;
}

.tab-configuration span {
    margin: 0;
}

.tab-configuration .spacer_box {
    display: flex;
    flex-direction: column;
    width: calc(100% - 20px);
    padding: 4px 10px;
}

.tab-configuration .spacer_box > * + * {
    border-top: 1px dotted var(--superSubtleAccent);
}

.tab-configuration .number,
.tab-configuration .select {
    display: flex;
    align-items: center;
    gap: 12px;
    width: 100%;
    padding: 4px 0;
}

.tab-configuration .number > :first-child,
.tab-configuration .select > :first-child {
    width: 100px;
}

.tab-configuration .number > :nth-child(2),
.tab-configuration .select > :nth-child(2) {
    flex-grow: 1;
}

.tab-configuration .board_align_inputs {
    width: 33.3%;
    float: left;
    white-space: nowrap;
}

.tab-configuration .board_align_inputs input {
    width: 3.5em;
    height: 20px;
    line-height: 20px;
    padding-left: 3px;
}

.tab-configuration .board_align_inputs label {
    display: block;
    overflow: hidden;
    text-overflow: ellipsis;
}

.tab-configuration .number:last-child,
.tab-configuration .select:last-child {
    border-bottom: none;
    padding-bottom: 0;
    margin-bottom: 0;
}

.tab-configuration .units {
  padding: 0 2px;
}

.tab-configuration .gui_box_titlebar {
    margin-bottom: 0;
}

.tab-configuration thead {
    display: none;
}

.tab-configuration .gui_box {
    margin-bottom: 10px;
    float: left;
}

.tab-configuration .system .gui_box {
    float: left;
}

.tab-configuration .board .gui_box,
.tab-configuration .acc .gui_box {
    float: left;
}

.tab-configuration .gps .gui_box,
.tab-configuration .other .gui_box {
    float: left;
    margin-bottom: 10px;
}

.tab-configuration .gps td:nth-child(2) {
    width: 38px;
}

.tab-configuration .other tr:last-child td {
    border-bottom: 0;
    padding-bottom: 0;
    margin-bottom: 0;
}

.tab-configuration .gui_box {
    font-weight: bold;
}

.tab-configuration .gui_box span {
    font-style: normal;
    font-weight: normal;
    line-height: 19px;
    color: #4f4f4f;
    font-size: 11px;
}

.tab-configuration .alignicon {
    width: 15px;
    height: 15px;
    float: left;
    margin: 3px;
}

.tab-configuration .pitch {
    background-image: url(/images/icons/cf_icon_pitch.svg);
    background-repeat: no-repeat;
    background-position: center;
}

.tab-configuration .yaw {
    background-image: url(/images/icons/cf_icon_yaw.svg);
    background-repeat: no-repeat;
    background-position: center;
}

.tab-configuration .roll {
    background-image: url(/images/icons/cf_icon_roll.svg);
    background-repeat: no-repeat;
    background-position: center;
}

.tab-configuration .board_align_content {
    width: 100%;
    display: inline-block;
}

.tab-configuration .sensor_align_content {
    margin-top: 4px;
}

.tab-configuration #gyro-frequency {
    box-sizing: border-box;
    border: none;
    background-color: var(--alternativeBackground);
    padding-left: 6px;
    font-weight: bold;
    width: 100px;
}

.tab-configuration .model-and-info {
    position: relative;
    height: 350px;
    width: 100%;
    margin-bottom: -2px;
}

.tab-configuration #interactive_block {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #f9f9f9;
    border-radius: 3px;
    border: 1px solid #e4e4e4;
}
.tab-configuration #interactive_block a.reset {
    position: absolute;
    display: block;
    top: 10px;
    right: 10px;
    border-radius: 3px;
    bottom: 10px;
    height: 28px;
    line-height: 28px;
    padding: 0 15px 0 15px;
    text-align: center;
    font-weight: bold;
    border: 1px solid var(--subtleAccent);
    background-color: #ececec;
    z-index: 100;
}
.tab-configuration #interactive_block a.reset:hover {
    background-color: #dedcdc;
}

.tab-configuration #canvas_wrapper {
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    border-radius: 3px;
}

.tab-configuration #canvas {
    width: 100% !important;
    height: 100% !important;
}

.tab-configuration #canvas_wrapper .webgl-error {
    display: none;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    color: var(--mutedText);
    font-size: 16px;
    font-weight: 600;
}

@media only screen and (max-width: 1100px) , only screen and (max-device-width: 1100px) {
    .tab-configuration .gui_box span {
        line-height: 17px;
    }
    .tab-configuration .system .gui_box {
        float: left;
    }
    .tab-configuration .board .gui_box, .tab-configuration .acc .gui_box {
        float: left;
    }
    .tab-configuration .gps .gui_box, .tab-configuration .other .gui_box {
        float: left;
    }
}
@media all and (max-width: 575px) {
    .tab-configuration .system .gui_box {
        min-height: auto;
    }
    .tab-configuration .gps td:nth-child(2) {
        width: auto;
    }
    .dshotbeacon > td > div.select > div, .dshotbeacon select.dshotBeeperBeaconTone {
        width: 100%;
    }
}

